On branch master  Your branch is up to date with 'origin/master'.  fixed width on mobile
 Changes to be committed:
	modified:   src/App.css

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 
 .Container{
   background-color: white;
-  min-width: 50%;
+  min-width: 70%;
   border-radius: 12px;
 }
 
